MODON MRE BPDEV/force-app/main/default/objects/Bucket__c/Bucket__c.object-meta.xml
<CustomObject>
    <label>Bucket</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Bucket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buckets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>