MODON MRE BPDEV/force-app/main/default/objects/Bucket__c/fields/Bucket_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Bucket_Group_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bucket Group Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>