MODON MRE BPDEV/force-app/main/default/objects/Bucket__c/fields/Number_of_units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_units__c</fullName>
    <label>Number of units</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>