MODON MRE BPDEV/force-app/main/default/objects/Bucket__c/fields/Number_of_Users__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Users__c</fullName>
    <label>Number of Users</label>
    <summaryForeignKey>Bucket_Assignment__c.Bucket__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>